--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div id='Jan' class="container-fluid">
+<div id='welcome-page' class="container-fluid">
     <header class="docs-header-background"
     aria-label="Get started" id="homepage-header">
     <div class="docs-header-section">
@@ -11,24 +11,26 @@
         </div>
     </div>
 </header>
-<div>
 
-<div id="About" class="homepage-tile" >
-    <h1>About me:</h1>
-    <app-ngb-carusel></app-ngb-carusel>
+<div id="bio">
+        <h1>Bio:</h1>
 
-    
-    <div id="About" class="homepage-tile" >
-    </div>
+</div>    
 
-<div id="skills">
-    <h1>Skills:</h1>
 
-</div>
 <div id="projects" class="homepage-tile" >
     <h1>Projects:</h1>
     <app-projects-grid></app-projects-grid>
 </div>
+
+
+<div id="about" class="homepage-tile">
+    <h1>About me:</h1>
+    <app-ngb-carusel></app-ngb-carusel>
+</div>
+
+
 <div id="contact" class="homepage-tile" >
     <h1>Contact me:</h1>
+
 </div>
