--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
@@ -1,7 +1,7 @@
 
 
 .img-wrapper{
-    width: 78vw; //adapt angular good practises
+    width: 84vw; //adapt angular good practises
     height: 72vh;
     margin: 1em 0;
 }
@@ -72,6 +72,7 @@ width: 25%;
     row-gap: 1em;
     column-gap: 1em;
     justify-content:center;
+    align-items: center;
     }
   
 
