--- a/src/app/components/projects-grid/projects-grid.component.scss
+++ b/src/app/components/projects-grid/projects-grid.component.scss
@@ -27,18 +27,18 @@
  max-height: 100%;
   }
 
-.img_project{
-  /* this centers and crops the image so that it doesn't break the aspect ratio */
-}
 
-
-  .button-group {
+.button-group {
+    
+    min-height: 10%;
     display: flex;
     flex-flow: row wrap;
-    column-gap: 1em;
     row-gap: 1em;
-    align-content:center;
-    justify-content: space-around;
-    width: fit-content;
+    column-gap: 1em;
+    justify-content:center;
+    align-items: center;
+    }
     
+matbutton{
+flex:1 1 0;
 }
