tooltip,aria,db slides

--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -11,8 +11,8 @@
                 <img [src]="hero.image_url" class="img_slide" alt={{hero.img_alt}}>
             </div>
             <div class="carousel-caption">
-                <h3>{{hero.title}}</h3>
-                <p>{{hero.description}}.</p>
+                <h2>{{hero.title}}</h2>
+                <h3>{{hero.description}}.</h3>
                 </div>
                 </ng-template>
                 </ngb-carousel>
