--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
@@ -13,7 +13,7 @@
     object-position: center center;
    
 }
-@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+
 .carousel-caption{
 
   white-space:pre-line; // \n\u2022 work properly in TS
@@ -31,22 +31,23 @@ background:#8080800d;
 box-shadow:0 8px 32px 0 #1f268780;
 backdrop-filter:blur(3px);
 -webkit-backdrop-filter:blur(3px);
-border-radius:10px;
 border:1px solid #ffffff;
+border-radius:10px;
+box-shadow:0 8px 32px 0 #1f268780;
 -webkit-box-shadow: 2px 3px 7px 1px #000000d0; 
-line-height: 2em;
-}
-  .carousel-caption h3 {
-    font-size:1rem;
-    font-weight: 400;     }
+line-height: 2rem;
 
-  .carousel-caption p {
-    font-size:1rem;
-    font-weight: 300;
+  h2 {
+    top: 50%;
+    font-weight: 200;     }
+
+  h3 {
+    
+    font-weight: 400;
       }
-}
 
 
+    }
 .button-group {
     display: flex;
     flex-flow: row nowrap;
