--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -12,14 +12,14 @@ $margin-promotion-sections-small: 152px;
   
   content: '';
   position: absolute;
-  background-image: url('../../../assets/img/homepage/angular-white-transparent.png');
+  background-image: url('../../../assets/img/homepage/portfolio-header-custom-logo.png');
   background-size: 500px;
-  top: 0;
+  top:0;
   bottom: 0;
   left: 0;
   right: 0;
   background-repeat: no-repeat;
-  background-position: 80% 20px;
+  background-position: 80% 30px;
   opacity: 0.2;
 }
 
@@ -39,7 +39,6 @@ $margin-promotion-sections-small: 152px;
     line-height: 56px;
     margin: 15px 5px;
   }
-  
   h2 {
     font-size: 20px;
     font-weight: 300;
@@ -57,7 +56,7 @@ $margin-promotion-sections-small: 152px;
   }
 .container-fluid {
   .homepage-tile{
-max-height: 100%;
+    max-height: 100%;
   }
   h1 {
     font-size: 46px;
@@ -66,14 +65,20 @@ max-height: 100%;
     margin: 15px 5px;
   }
   h2{
-        font-size: 20px;
-    font-weight: 400;
+    font-size: 20px;
+    font-weight: 300;
     line-height: 28px;
     margin: 15px 0 25px 0;
   
   }
 }
-
+#bio{
+  height: 100%;
+}
+.contact-clipboard{
+  width: 600px;
+  
+  }
 
 /*comment out unused css
 
