Dev workspace setup

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,8 +6,7 @@
       
   >
     <mat-toolbar>
-      <mat-icon aria-label="Home icon">home</mat-icon>
-
+      <mat-icon aria-label="Home icon">home</mat-icon><span class="side-nav-toolbar-spacer"></span>
       Menu</mat-toolbar>
     <mat-nav-list
       class="menu-list-item">
