--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,6 +7,10 @@
   >
     <mat-toolbar>
       <mat-icon aria-label="Home icon">home</mat-icon><span class="side-nav-toolbar-spacer"></span>
+      <app-theme-switch>
+        [options]="options$ | async"
+        (themeChange)="themeChangeHandler($event)">
+      </app-theme-switch>
       Menu</mat-toolbar>
     <mat-nav-list
       class="menu-list-item">
@@ -106,7 +110,8 @@ matTooltip="Button to toggle Show / hide all tooltips, also user can scroll mous
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>Jan's Code:</span>
-      
+      <app-theme-switch [options]="options$ | async" (themeChange)="themeChangeHandler($event)">
+      </app-theme-switch>
      
       <span class="side-nav-toolbar-spacer"></span>
       <app-counter-data matTooltip="Current day of the week and date" #tooltip="matTooltip"
