--- a/src/app/components/projects-grid/projects-grid.component.scss
+++ b/src/app/components/projects-grid/projects-grid.component.scss
@@ -3,19 +3,46 @@
 .grid-container {
   width: 100%;
   }
+  .grid-tile{
+width: 100%;
+height: 100%;
+}
 .dashboard-card {
-  position: absolute;
+ 
   top: 15px;
   left: 15px;
   right: 15px;
   bottom: 15px;
- max-height: 100%;
- max-width: 100%;
+  padding: 0;
+  width: 95%;
+  height: 95%;
+  max-width: 100%;
+max-height: 100%;
+ 
   &:hover {
     @include mat.elevation(8);
   }
 }
+.card-title{
+    font-size: 26px;
+    font-weight: bold;
+    line-height: 26px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top: 15px;
+}
+.card-subtitle{
+font-size: 20px;
+    font-weight: 300;
+    line-height: 28px;
+    margin-left: 15px;
+}
+.card-description{
+margin-top: 15px;
+margin-left: 35px;
 
+
+}
 .more-button {
   position: absolute;
   top: 5px;
@@ -23,8 +50,8 @@
 }
 
 .dashboard-card-content {
- max-width: 100%;
- max-height: 100%;
+width: 100%;
+height: 100%;
   }
 
 
@@ -33,12 +60,21 @@
     min-height: 10%;
     display: flex;
     flex-flow: row wrap;
-    row-gap: 1em;
-    column-gap: 1em;
+    row-gap: 2%;
+    column-gap: 2%;
     justify-content:center;
     align-items: center;
     }
     
 matbutton{
 flex:1 1 0;
+}
+mat-card img{
+        width: 60%;
+        height: auto;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 3%;
+  
 }
