--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap");
 
