--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -73,7 +73,7 @@ matTooltip="Visit my GitHub page"
  aria-tooltip="Aria description"
  href="https://github.com/khq1"
   target="_blank"><img
-    src="../../../assets/img/homepage/github-circle-black-transparent.svg" alt="Github" class="docs-angular-logo"><span
+    src="assets/img/homepage/github-circle-black-transparent.svg" alt="Github" class="docs-angular-logo"><span
     class="side-nav-but-spacer"></span>GitHub
 </a>
           
