--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -105,8 +105,8 @@ matTooltip="Button to toggle Show / hide all tooltips, also user can scroll mous
       <span class="side-nav-toolbar-spacer"></span>
       <app-counter-data matTooltip="Current day of the week and date" #tooltip="matTooltip"
       class="toolbar-date"></app-counter-data>
-      <mat-icon matBadge="15" matBadgeColor="warn" class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
-      matTooltip="heart ico to increase morale during app development process" #tooltip="matTooltip"
+      <mat-icon matBadge="15" matBadgeColor="accent" class="badge-icon favorite-icon" aria-label="Icon-button with heart icon"
+      matTooltip="Show Messages" #tooltip="matTooltip"
       >favorite</mat-icon>
       
     </mat-toolbar>
