--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -12,7 +12,7 @@
     </div>
 </header>
 
-<div id="bio">
+<div id="bio" class="homepage-tile">
         <h1>Bio</h1>
 <mat-tab-group>
     <mat-tab label="Short">
