--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -84,7 +84,7 @@ $margin-promotion-sections-small: 152px;
   }
 .container-fluid {
   .homepage-tile{
-    max-height: 100%;
+    min-height: 100vh;
   }
   h1 {
     font-size: 46px;
