--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -26,6 +26,9 @@ overflow-y: hidden;
   z-index: 1;
   background-color: black;
   }
+.mat-toolbar.mat-primary
+
+
 .menu-list-item{
 
   font-size: 26px;
