--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,55 +1,71 @@
-<div id='welcome-page' class="container-fluid">
-    <header class="docs-header-background"
-    aria-label="Get started" id="homepage-header">
+<div id="welcome-page" class="container-fluid">
+  <header
+    class="docs-header-background"
+    aria-label="Get started"
+    id="homepage-header"
+  >
     <div class="docs-header-section">
-        <div class="docs-header-headline">
-            <h1 class="mat-h1">{{name}}Warzecha</h1>
-            <h2>Full Stack Developer</h2>
-        </div>
-        <div class="docs-header-start">
-            <a mat-raised-button class="docs-button" routerLink="/Homepage#projects"><mat-form-field appearance="fill">
-                <mat-label>What's your name?</mat-label>
-                <input matInput [(ngModel)]="name">
-            </mat-form-field></a>
-            
-            
-        </div>
+      <div class="docs-header-headline">
+        <h1 class="mat-h1">Jan Warzecha</h1>
+        <h2>Full Stack Developer</h2>
+      </div>
+      <div class="docs-header-start"></div>
     </div>
-</header>
+  </header>
 
-<div id="bio" class="homepage-tile">
-        <h1>Bio</h1>
-<mat-tab-group>
-    <mat-tab label="Short">
-        <h2>
-            Hi, I am John.
-    
-        </h2> <p>Your best hr decision ever made</mat-tab>
-    <mat-tab label="Professional"> Content 2 </mat-tab>
-    <mat-tab label="Personal"> Content 3 </mat-tab>
-</mat-tab-group>
-</div>    
+  <div id="bio" class="homepage-tile">
+    <h1>Bio</h1>
+    <mat-tab-group>
+      <mat-tab label="Short">
+        <h2>Hi, I am John.</h2>
+        <p>Your best hr decision ever made</p></mat-tab
+      >
 
+      <mat-tab label="Professional"> Content 2 </mat-tab>
+      <mat-tab label="Personal"> Content 3 </mat-tab>
+    </mat-tab-group>
+  </div>
 
-<div id="projects" class="homepage-tile" >
+  <div id="projects" class="homepage-tile">
     <h1>Projects</h1>
     <app-projects-grid></app-projects-grid>
-</div>
+  </div>
 
-
-<div id="about" class="homepage-tile">
+  <div id="about" class="homepage-tile">
     <h1>About me</h1>
     <app-ngb-carusel></app-ngb-carusel>
-</div>
+  </div>
 
-
-<div id="contact" class="homepage-tile" >
+  <div id="contact" class="homepage-tile">
     <h1>Contact me</h1>
-<p><h2>Copy my mail</h2>
-<h3>
-<div class="contact-clipboard">My Mail
-<button mat-button cdkCopyToClipboard="ThisIsMyMail@mmail.com" (click)="CoppiedMsg()"><mat-icon>content_copy</mat-icon>Copy to clipboard</button>
-</div>
-</h3>
-</div>
 
+    
+    <mat-form-field appearance="fill">
+      <mat-label>What's your name?</mat-label>
+      <input matInput [(ngModel)]="name">
+    </mat-form-field>{{name}}
+
+<mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>Leave a comment</mat-label>
+    <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+  </mat-form-field>
+
+
+
+
+    <p></p>
+    <h2>Copy my mail</h2>
+    <h3>
+      <div class="contact-clipboard">
+        My Mail
+        <button
+          mat-button
+          cdkCopyToClipboard="ThisIsMyMail@mmail.com"
+          (click)="CoppiedMsg()"
+        >
+          <mat-icon>content_copy</mat-icon>Copy to clipboard
+        </button>
+      </div>
+    </h3>
+  </div>
+</div>
