--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.scss
@@ -1,106 +1,86 @@
-
-
-.img-wrapper{
-    width: 84vw; //adapt angular good practises
-    height: 72vh;
-    margin: 1em 0;
+.img-wrapper {
+  width: 84vw; //adapt angular good practises
+  height: 72vh;
+  margin: 1em 0;
 }
- .img_slide{
-     
-    width: inherit;
-    height: inherit;
-    object-fit: cover;
-    object-position: center center;
-   
+.img_slide {
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
+  object-position: center center;
 }
 
-.carousel-caption{
+.carousel-caption {
+  white-space: pre-line; // \n\u2022 work properly in TS
+  text-align: left;
 
-  white-space:pre-line; // \n\u2022 work properly in TS
- text-align: left;
-
-position:absolute;
-top:2%;
-height:auto;
-max-height: 100%;
-text-shadow: 1px 1px 1px black;
-color: black;
-line-height: 2rem;
-
-  background-color: black;
-  color: #fff; 
+  position: absolute;
+  bottom: 5%;
+  height: auto;
+  max-height: 50%;
+  text-shadow: 1px 1px 1px black;
+  color: #fff;
   display: inline;
-  padding: 0.5rem;
-  
+  padding: 0px;
+
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
 
-
   h1 {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
-    line-height: 56px;
+    line-height: 1em;
     margin: 15px 5px;
   }
-  h2{
+  h2 {
     font-size: 22px;
     font-weight: 300;
-    line-height: 28px;
+    line-height: 1.5em;
     margin: 15px 0 25px 0;
-  
   }
-  h3{
+  h3 {
     font-size: 18px;
-    font-weight: 300;
-    line-height: 28px;
+    font-weight: 400;
+    line-height: 24px;
     margin: 15px 0 25px 0;
-
-
-    }
+  }
 }
 .button-group {
-    display: flex;
-    flex-flow: row nowrap;
-    column-gap: 1em;
-    row-gap: 1em;
-    align-content:center;
-    justify-content: space-around;
-    width: 100%;
-    max-width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  column-gap: 1em;
+  row-gap: 1em;
+  align-content: center;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 100%;
 }
-.cycle_pause_button{
-width: 25%;
+.cycle_pause_button {
+  width: 25%;
 }
-.slide-controls-panel{
-    width: 75%;
-    }
+.slide-controls-panel {
+  width: 75%;
+}
 
 .button-group-panel {
-    min-height: 10%;
-    display: flex;
-    flex-flow: row wrap;
-    row-gap: 1em;
-    column-gap: 1em;
-    justify-content:flex-flow;
+  min-height: 10%;
+  display: flex;
+  flex-flow: row wrap;
+  row-gap: 1em;
+  column-gap: 1em;
+  justify-content: flex-flow;
 
-    
-    
-  
+  .interval-right-align {
+    text-align: right;
+    font-weight: 600;
+  }
 
-.interval-right-align {
-  text-align: right;
-  font-weight: 600;
-}
+  input.interval-right-align::-webkit-outer-spin-button,
+  input.interval-right-align::-webkit-inner-spin-button {
+    display: none;
+  }
 
-input.interval-right-align::-webkit-outer-spin-button,
-input.interval-right-align::-webkit-inner-spin-button {
-  display: none;
-}
-
-input.interval-right-align {
-  -moz-appearance: textfield;
-}
-
-
-
+  input.interval-right-align {
+    -moz-appearance: textfield;
+  }
 }
