--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -18,8 +18,7 @@
     <mat-tab-group>
       <mat-tab label="Short">
         <h2>Hi, I am John.</h2>
-        <p>Your best hr decision ever made</p></mat-tab
-      >
+        <p>Your best hr decision ever made</p></mat-tab>
 
       <mat-tab label="Professional"> Content 2 </mat-tab>
       <mat-tab label="Personal"> Content 3 </mat-tab>
@@ -40,14 +39,11 @@
     <h1>Contact me</h1>
 
     
-    <mat-form-field appearance="fill">
-      <mat-label>What's your name?</mat-label>
-      <input matInput [(ngModel)]="name">
-    </mat-form-field>{{name}}
+    
 
 <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Leave a comment</mat-label>
-    <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+    <textarea matInput placeholder="yeah... write something"></textarea>
   </mat-form-field>
 
 
