--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -4,19 +4,22 @@
 
 <form class="example-form">
     <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Assignee</mat-label>
+        <mat-label>Title</mat-label>
         <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
             <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                {{option.name}}
+                {{option.title}}
             </mat-option>
         </mat-autocomplete>
     </mat-form-field>
-</form>
-<form class="example-form">
+<mat-form-field appearance="fill" class="example-full-width">
+    <mat-label>What's your name?</mat-label>
+    <input matInput [(ngModel)]="title">
+</mat-form-field>
+
     <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>State</mat-label>
-        <input matInput aria-label="State" [matAutocomplete]="auto1" [formControl]="stateCtrl">
+        <mat-label>Country</mat-label>
+        <input matInput aria-label="Country" [matAutocomplete]="auto1" [formControl]="stateCtrl">
         <mat-autocomplete #auto1="matAutocomplete">
             <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
                 <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
