--- a/src/app/components/hero/messages/messages.component.css
+++ b/src/app/components/hero/messages/messages.component.css
@@ -1,4 +1,5 @@
 .container{
+    background-color: black;
     font-size: medium;
     position: absolute;
 
@@ -11,6 +12,9 @@ width: 300px;
     z-index: 2;
 }
 .message{
-   background-color: blue;
+    margin: 5px;
+
+   background-color: white;
+   color: black;
   
 }
